PDF: Expand biblio

--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -1,15 +1,69 @@
 % Examples from https://verbosus.com/bibtex-style-examples.html
-@ARTICLE{Article,
-  author   = {Peter Adams},
-  title    = {The title of the work},
-  journal  = {The name of the journal},
-  year     = {1993},
-  number   = {2},
-  pages    = {201-213},
-  month    = {7},
-  volume   = {4},
+
+
+
+
+
+@Online{src1,
+	title= {State of the IoT 2018: Number of IoT devices now at 7B – Market accelerating},
+	url =          {https://iot-analytics.com/state-of-the-iot-update-q1-q2-2018-number-of-iot-devices-now-7b/},
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@Online{src2,
+	title= {Internet Of Things (iot)},
+	url =          {https://www.gartner.com/en/information-technology/glossary/internet-of-things},
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@ARTICLE{src3,
+  author   = { Беклемищева Н.Б. and Жуков В.Г. and Михайлов К.Д. },
+  title    = { О некоторых вопросах информационной безопасности медицинских устройств },
+  journal  = { Актуальные проблемы авиации и космонавтики },
+  year     = {2017},
+  number   = {13},
   hyphenation = {english}
 }
+
+@Online{src4,
+	title= { Government response to the Regulatory proposals for consumer Internet of Things (IoT) security consultation },
+	url =          { https://www.gov.uk/government/consultations/consultation-on-regulatory-proposals-on-consumer-iot-security/outcome/government-response-to-the-regulatory-proposals-for-consumer-internet-of-things-iot-security-consultation },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@Online{src5,
+	title= { Интернет вещдоков. Власти разработали концепцию развития сетей IoT },
+	url =          { https://www.kommersant.ru/doc/3924324 },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@Online{src6,
+	title= { Защита для чайников. Интернет вещей хотят обезопасить от кибератак },
+	url =          { https://rg.ru/2016/10/13/evrokomissiia-predlozhila-zashchitit-internet-veshchej-ot-kiberatak.html },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@Online{src7,
+	title= { HP Study Reveals 70 Percent of Internet of Things Devices Vulnerable to Attack },
+	url =          { https://www8.hp.com/us/en/hp-news/press-release.html?id=1744676 },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+
+
+
+
+
+
+
+
+
 
 @BOOK{Book,
   author    = {Peter Babington}, 
