--- a/PDF/my_folder/introduction.tex
+++ b/PDF/my_folder/introduction.tex
@@ -1,6 +1,12 @@
 \chapter*{Введение} % * не проставляет номер
 \addcontentsline{toc}{chapter}{Введение} % вносим в содержание
 
+В последние десятилетия сетевые технологии прочно вошли в жизнь человека. Изначально они были представлены локальными сетями, затем была создана сеть Интернет. В настоящее время одним из бурно развивающихся направлений сетевых технологий является интернет вещей (Internet of Things, IoT). Так, за период 2015-2018 гг. доля IoT-устройств среди всех устройств увеличилась с 27\% до 39\%, и, согласно прогнозу, достигнет 63\% к 2025 году \cite{src1}. 
+
+Интернет вещей – это вычислительная сеть физических предметов (устройств, «вещей»), оснащенных встроенной технологией для взаимодействия друг с другом или с внешней средой \cite{src2}.
+
+\textbf{Актуальность исследования}. Одной из важных задач при проектировании IoT является обеспечение должного уровня безопасности передаваемых данных. Особенно это важно для медицинских устройств . Уже сейчас правительства развитых стран начинают принимать законы, регламентирующие защиту IoT-устройств. В то же время фактическая безопасность устройств интернета вещей оставляет желать лучшего. Так, согласно исследованию корпорации HP 2014-го года, 70\% устройств IoT передавали данные, в том числе конфиденциального характера, вообще без шифрования! По этой причине изучение и развитие средств защиты IoT-устройств является актуальной задачей.
+
 Данный пример1 выпускной квалификационной работы (далее --- ВКР) создан для того, чтобы продемонстрировать возможности шаблонов SPbPU-student-templates, выполненных с помощью издательской системы \LaTeX{} \cite{spbpu-student-thesis-template}. В примере отображены некоторые обязательные элементы ВКР \cite{spbpu-student-thesis-specification}. Для того, чтобы подробнее ознакомиться с требованиями к наполнению этих элементов, а также с общими требованиями к структуре и оформлению ВКР, пожалуйста, ознакомьтесь с  \cite{spbpu-student-thesis-template-author-guide,spbpu-student-thesis-specification}. 
 
 
