PDF: introduction completed

--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -19,12 +19,12 @@
 }
 
 @ARTICLE{src3,
-  author   = { Беклемищева Н.Б. and Жуков В.Г. and Михайлов К.Д. },
-  title    = { О некоторых вопросах информационной безопасности медицинских устройств },
-  journal  = { Актуальные проблемы авиации и космонавтики },
+  author   = {Н.Б. Беклемищева and В.Г. Жуков and К.Д. Михайлов },
+  title    = {О некоторых вопросах информационной безопасности медицинских устройств},
+  journal  = {Актуальные проблемы авиации и космонавтики},
   year     = {2017},
   number   = {13},
-  hyphenation = {english}
+  hyphenation = {russian}
 }
 
 @Online{src4,
@@ -38,14 +38,14 @@
 	title= { Интернет вещдоков. Власти разработали концепцию развития сетей IoT },
 	url =          { https://www.kommersant.ru/doc/3924324 },
 	urldate =      {2020-06-10},
-	hyphenation =     {english}
+	hyphenation =     {russian}
 }
 
 @Online{src6,
 	title= { Защита для чайников. Интернет вещей хотят обезопасить от кибератак },
 	url =          { https://rg.ru/2016/10/13/evrokomissiia-predlozhila-zashchitit-internet-veshchej-ot-kiberatak.html },
 	urldate =      {2020-06-10},
-	hyphenation =     {english}
+	hyphenation =     {russian}
 }
 
 @Online{src7,
