--- a/PDF/my_folder/introduction.tex
+++ b/PDF/my_folder/introduction.tex
@@ -5,122 +5,52 @@
 
 Интернет вещей – это вычислительная сеть физических предметов (устройств, «вещей»), оснащенных встроенной технологией для взаимодействия друг с другом или с внешней средой \cite{src2}.
 
-\textbf{Актуальность исследования}. Одной из важных задач при проектировании IoT является обеспечение должного уровня безопасности передаваемых данных. Особенно это важно для медицинских устройств . Уже сейчас правительства развитых стран начинают принимать законы, регламентирующие защиту IoT-устройств. В то же время фактическая безопасность устройств интернета вещей оставляет желать лучшего. Так, согласно исследованию корпорации HP 2014-го года, 70\% устройств IoT передавали данные, в том числе конфиденциального характера, вообще без шифрования! По этой причине изучение и развитие средств защиты IoT-устройств является актуальной задачей.
+\textbf{Актуальность исследования}. Одной из важных задач при проектировании IoT является обеспечение должного уровня безопасности передаваемых данных. Особенно это важно для медицинских устройств\cite{src3}. Уже сейчас правительства развитых стран начинают принимать законы, регламентирующие защиту IoT-устройств\cite{src4}\cite{src5}\cite{src6}. В то же время фактическая безопасность устройств интернета вещей оставляет желать лучшего. Так, согласно исследованию корпорации HP 2014-го года, 70\% устройств IoT передавали данные, в том числе конфиденциального характера, вообще без шифрования\cite{src7}! По этой причине изучение и развитие средств защиты IoT-устройств является актуальной задачей.
 
-Данный пример1 выпускной квалификационной работы (далее --- ВКР) создан для того, чтобы продемонстрировать возможности шаблонов SPbPU-student-templates, выполненных с помощью издательской системы \LaTeX{} \cite{spbpu-student-thesis-template}. В примере отображены некоторые обязательные элементы ВКР \cite{spbpu-student-thesis-specification}. Для того, чтобы подробнее ознакомиться с требованиями к наполнению этих элементов, а также с общими требованиями к структуре и оформлению ВКР, пожалуйста, ознакомьтесь с  \cite{spbpu-student-thesis-template-author-guide,spbpu-student-thesis-specification}. 
+Безопасность устройств с ограниченными энергетическими ресурсами (а именно такими являются устройства интернета вещей) изучает раздел криптографии, называемый легковесной криптографией (lightweight cryptography, LWC). Также возможны термины «облегченная криптография», «малоресурсная криптография», «низкоэнергетическая криптография». Она рассматривает криптографические алгоритмы в контексте их требовательности к ресурсам устройства и количеству логических элементов, требуемых для реализации алгоритмов. Рассматриваемые ею алгоритмы называются алгоритмами легковесной криптографии (легковесными алгоритмами, LW-алгоритмами). LW-алгоритмы могут иметь программную или аппаратную реализацию.
 
+\textbf{Объектом исследования} являются алгоритмы легковесной криптографии, ориентированные на использование в устройствах интернета вещей.
 
-Технология написания ВКР на \LaTeX{} подробно изложена в \cite{spbpu-student-thesis-template-author-guide}. В рекомендациях приведены ссылки на учебно-справочные материалы \LaTeX{} (под \LaTeX{} в документе может подразумеваться также \TeX, \LaTeXe).
+\textbf{Предметом исследования} являются следующие характеристики легковесных алгоритмов: тип алгоритма, требования к устройству, производительность. Алгоритмы рассматриваются с точки зрения программной реализации.
 
-
-Авторам, использующим \LaTeX{}, необходимо последовательно заменять текст данного шаблона в файлах <<\verb|thesis.tex|>> на текст своей ВКР, избегая при этом ошибок (errors) при компиляции. Синтаксические конструкции \LaTeX, которые задействованы в формировании того или иного текста выделены \texttt{машинописным шрифтом}. Иные шрифты в тексте ВКР (за исключением математических) использовать запрещено. 
-
-Светлым курсивом выделены \textit{важные} элементы текста (ключевые слова определений, интонационные выделения словосочетаний), полужирным шрифтом --- \textbf{служебные} элементы текста (<<определение>>, <<теорема>>, <<лемма>> и т.п), а также при необходимости ключевые слова в алгоритмах. В соотношении к основному тексту курсив и полужирный шрифт не может превышать 1 \% текста на странице.
- 
-Полужирный курсив разрешено использовать только в \textbf{\textit{названиях подпараграфов (пунктов)}} и запрещёно использовать в основном тексте. 
-\uline{Подчеркивание} допускается использовать только в задании в местах, где данные вписываются студентом, а также в математических формулах при необходимости.
-
-Введение \textit{не должно превышать 4 страницы}. Во введении необходимо обосновать выбор темы, охарактеризовать современное состояние изучаемой проблемы, ее актуальность, практическую и теоретическую значимость, степень разработанности данной проблемы.
-
-
-\textbf{Aктуальность исследования} заключается в N фактах и явлениях,  а также в их состоянии, связанных с ними нерешенных проблемах, слабо освещенных и требующих уточнения или дальнейшей разработки вопросов. 
-
-\textbf{Объект исследования} --- это то, на что направлен процесс познания (индивид, коллектив, общность людей, сфера деятельности и т.п.). Связь объекта и предмета легко запоминаются по формуле: <<исследуем такой-то объект на предмет чего-то>>. Это процесс или явление, порождающее проблемную ситуацию, и избран-ное для изучения в целом. Всегда в объекте содержится предмет, а не наоборот. 
-
-\textbf{Предмет исследования} --- один из аспектов, часть рассматриваемого объекта (свой-ства, состояния, процессы, направления и особенности деятельности структур по связям с общественностью, их сотрудников в конкретных сферах общественных отношений и т.д.). Предмет исследования частично совпадает с названием работы и содержится в цели сразу после сказуемого (<<выявить \ldots что?>>, <<определить \ldots что?>>, <<сформировать \ldots что?>>). Именно предмет исследования определяет тему выпускной квалификационной работы.
-Объект и предмет исследования соотносятся между собой как целое и частное, общее и частности. 
-
-
-\textit{Цель исследования} формулируется, исходя из проблемы, которую следует разрешить студенту в процессе выполнения выпускной квалификационной работы и представляет собой в самом сжатом виде тот результат (результаты), который должен быть получен в итоге исследования. Формулировку цели рекомендуется начинать со слов: <<сформировать/создать>>, <<разработать>>, <<провести>>, <<подготовить>>.
-
-\textbf{Цель исследования} --- краткий ожидаемый результат, то есть решение практических задач и новые знания о рассматриваемом предмете исследования. 
-В соответствии с целью исследования, логически определяются следующие \textbf{задачи работы} (должно быть \textit{не менее четырех задач, но не более шести задач}):
-
+\textbf{Целью исследования} является сравнение легковесных алгоритмов и определение степени их пригодности к использованию в устройствах IoT. Для достижения выбранной цели поставлены следующие \textbf{задачи}:
 \begin{enumerate}
-	\item Первая задача.
-	\item Вторая задача.
-	\item Третья задача.
-	\item Четвертая задача.
+	\item Обзор теоретических источников по темам легковесной криптографии и интернета вещей.
+	\item Обзор существующих стандартов и технических решений.
+	\item Анализ различных видов алгоритмов.
+	\item Реализация избранных алгоритмов.
+	\item Ранжирование видов алгоритмов по степени пригодности к использованию в устройствах IoT. Формулировка рекомендаций по их использованию.
 \end{enumerate} 
 
+\textbf{Гипотеза исследования}. Предполагается, что значительное число классических шифров с определенным ослаблением могут использоваться в качестве легковесных алгоритмов. С другой стороны, многие алгоритмы и классы алгоритмов по тем или иным соображениям однозначно не могут быть использованы в качестве LW-алгоритмов. Ряд алгоритмов может быть использован наилучшим образом при определенных условиях. Может быть создана методика, позволяющая приблизительно оценить производительность реализации легковесного алгоритма с использованием только персонального компьютера, без необходимости взаимодействия с низкоресурсными устройствами.
 
-Задачи отражают \textit{поэтапное достижение цели, при этом уточняют границы проводимого исследования}.
-Рекомендуется формулировать задачи с глаголов в форме перечисления: <<изучить \ldots>>, <<выявить \ldots>>, <<проанализировать \ldots>>, <<разработать \ldots>>, <<описать \ldots>> и т.п. Заголовки выпускной квалификационной работы должны отражать суть поставленной задачи.
-
-
-Общая направленность исследования задается до его начала сформулированными \textbf{гипотезами}, которыми могут быть:
+В данной работе используются такие \textbf{методы исследования}, как:
 \begin{itemize}
-	\item научное предположение, выдвигаемое для объяснения каких-либо факторов, явлений и процессов, которые надо подтвердить или опровергнуть (т. е. требующее верификации);
-	\item вероятностное знание, научно обоснованная догадка по объяснению действительности;
-	\item прогноз ожидаемого решения проблемы, ответ на вопрос, поставленный в задаче;
-	\item условно-категорическое умозаключение по схеме <<если \ldots, то \ldots>>, основными элементами которого являются условие (причина) и результат (следствие).
+	\item анализ технической литературы;
+	\item изучение существующих спецификаций алгоритмов, стандартов, технологических систем;
+	\item декомпозиция алгоритмов;
+	\item сравнение алгоритмов, подходов к шифрованию, структурных частей алгоритмов;
+	\item реализация алгоритмов на языке С;
+	\item определение методологии их тестирования;
+	\item реализация конкретной методики тестирования;
+	\item анализ результатов тестирования;
+	\item синтез выводов по результатам тестирования;
+	\item обобщение результатов работы.
 \end{itemize}  
 
-Гипотеза --- это предполагаемое решение проблемы. В ходе исследования гипотезу проверяют и либо подтверждают, либо опровергают. Формулировка гипотезы \textit{обязательна только для магистров}.
+Данное исследование имеет высокую \textbf{практическую значимость}.  Результаты исследования могут быть использованы при выборе алгоритма шифрования и режима его работы при проектировании системы защиты вычислительной сети IoT. Кроме того, работа в данном направлении может быть продолжена: следующим шагом возможна оптимизация существующих легковесных алгоритмов или создание новых LW-алгоритмов. Предложенная методология тестирования времени работы алгоритмов и их энергопотребления может быть использована при тестировании других алгоритмов. Присутствует и \textbf{научная значимость}. Можно исследовать «побочные» вопросы, возникшие в процессе выполнения работы.
 
+Введение раскрывает актуальность, определяет степень научной разработки темы, объект, предмет, цель, задачи и методы исследования, раскрывает теоретическую и практическую значимость работы.
 
-\textbf{Теоретическая и методологическая база исследования}. В теоретической базе необходимо перечислить источники, которые использовались для написания работы. Приведём примеры ключевых фраз: 
-\begin{itemize}
-	\item <<Теоретической основой выпускной квалификационной работы послужили исследования  \ldots (перечисляются конкретные документы)>>.
-	\item <<Практическая часть работы выполнялась на основании документов  \ldots>>.
-	\item  <<При написании выпускной квалификационной работы использовалась работы отечественных и зарубежных специалистов \ldots>>.
-	\item  <<Для выполнения анализа в практической части были использованы материалы  \ldots>>.
-	\item <<При подготовке ВКР были использованы материалы таких учебных дисциплин, как "Технология конструкционных материалов'', "Экономика'' "Начертательная геометрия'' \ldots>>.
-	\item <<При выполнении ВКР использовались материалы N организации \ldots (ссылка на официальный сайт)>>.
-\end{itemize}
+В первой главе содержатся краткое теоретическое введение в тему криптографии и интернета вещей, описываются основные угрозы безопасности систем IoT.
 
-\textbf{Методологическая база исследования} должна содержать указание на методы и подходы, на которых основывается данная ВКР. 
+Во второй главе вводится понятие легковесных криптографических алгоритмов. Описываются требования к ним и их применение для нейтрализации угроз безопасности системам IoT, оно сравнивается с нейтрализацией угроз в системах общего назначения). Проводится анализ различных видов алгоритмов на пригодность их для такого применения, рассматриваются наиболее популярные их представители.
 
-Среди методов исследования студенту необходимо обратить внимание на общенаучные методы, включающие эмпирические (наблюдение, эксперимент, сравнение, описание, измерение), теоретические (формализация, аксиоматический, гипотетико-дедуктивный, восхождение от абстрактного к конкретному) и общелогические (анализ, абстрагирование, обобщение, идеализация, индукция, аналогия, моделирование и др.) методы.
-Также следует назвать конкретно-научные (частные) методы научного познания, представляющие собой специфические методы конкретных наук: экономики, социологии, психологии, истории, логики и проч.
+В третьей главе описывается методология тестирования производительности и энергопотребления легковесных криптоалгоритмов на персональном компьютере. 
 
-\textbf{Информационной базой} для разработки ВКР служат материалы, собранные студентом в процессе обучения в ВУЗе, в ходе прохождения учебной и производственной практик, а также во время прохождения преддипломной практики.
-Дополнительная информационная база может включать информацию официальных статистических публикаций (например, Госкомстата России), материалы, получаемые из Интернета, информацию международных организаций и ассоциаций. 
+В четвертой главе содержится информация о реализации алгоритмов в программном коде, способе и порядке тестирования производительности алгоритмов, а также дальнейшей обработки результатов тестирования. Проводится анализ полученных результатов.
 
-\textbf{Степень научной разработанности проблемы} --- это состояние теоретической разработанности проблемы, анализ работ отечественных и зарубежных авторов, исследующих эту проблему. Здесь важно подчеркнуть исторические, экономические, политические или профессиональные явления, повлиявшие на выбор темы. Также в данной части введения проводится критический обзор современного состояния и освещения исследуемой темы в научной, профессиональной литературе и СМИ, обобщаются и оцениваются точки зрения различных авторов по теме исследования. 
-
-\textbf{Научная новизна} выявляется в результате анализа литературных источников, уточнения концептуальных положений, обобщения опыта решения подобных проблем. Это принципиально новое знание, полученное в науке в ходе проведенного исследования (теоретические положения, впервые сформулированные и обоснованные, собственные методические рекомендации, которые можно использовать в практике).
-Научная новизна выпускной квалификационной работы может состоять: 
-\begin{itemize}
-	\item в изучении фактов и явлений с помощью специальных научных методов и междисциплинарных подходов;
-    \item в изучении уже известного в науке явления на новом экспериментальном материале;
-	\item в переходе от качественного описания известных в науке фактов к их точно определяемой количественной характеристике;
-	\item в изучении известных в науке явлений и процессов более совершенными методами;
-	\item в сопоставлении, сравнительном анализе протекания процессов и явлений;
-	\item в изменении условий протекания изучаемых процессов;
-	\item в уточнении категориального аппарата дисциплины, определение типологии, признаков, специфики изучаемого явления.
-\end{itemize}
-
-\textbf{Практическая значимость} подробно отражается в:
-\begin{itemize}
-	\item практических рекомендациях или разработанном автором выпускной квалификационной работы проекте (как основная часть выпускной квалификационной работы);
-	\item выявлении важности решения избранной проблемы для будущей деятельности магистра по выбранному направлению подготовки.
-\end{itemize} 
-
-Практическая значимость выпускной квалификационной работы может заключаться в возможности:
-
-\begin{itemize}
-	\item решения той или иной практической задачи в сфере профессиональной деятельности;
-	\item проведения дальнейших научных исследований по теме ВКР;
-	\item разработки конкретного проекта, направленного на интенсификацию работы исследуемой организации, предприятия.
-\end{itemize}
-
-\textbf{Апробация результатов} исследования включает:
-\begin{itemize}
-	\item участие в конференции, семинарах и т. д.;
-	\item публикации по теме выпускной квалификационной работы;
-	\item применение результатов исследования в практической области;
-	\item разработку и внедрение конкретного проекта;
-	\item выступления на научных конференциях, симпозиумах, форумах и т.п. (\textit{обязательно});
-	\item публикации студента, включенные в список использованных источников. 
-\end{itemize}
-
-
-В силу ограниченности объема необходимо очень тщательно подойти к написанию введения, которое должно стать <<визитной карточкой>>, кратко, но емко характеризующей работу. Во введение не включают схемы, таблицы, описания, рекомендации и т.п. 
-
-Целью первой главы, как правило, является всесторонний анализ предмета и объекта исследования, второй --- разработка предложений (алгоритмов, технологий и т.п.) по улучшению какого-либо процесса, протекающих с участием предмета и объекта исследования, третьей --- практическая реализация (имплементация) --- предложений (алгоритмов, технологий и т.п.) в виде программного (или иного) продукта, четвертой --- апробация разработанных в работе предложений и выводы целесообразности их дальнейшей разработки (использованию). 
-Содержание глав в данном шаблоне приведено только для демонстрации возможностей \LaTeX.
-
+В заключении подводятся итоги работы, приводятся краткие перспективы использования результатов работы. 
 
 %% Вспомогательные команды - Additional commands
 %\newpage % принудительное начало с новой страницы, использовать только в конце раздела
