--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -55,8 +55,64 @@
 	hyphenation =     {english}
 }
 
+% Chapter 1
 
+@BOOK{src8,
+	author    = {В. В. Ященко}, 
+	title     = {Введение в криптографию},
+	publisher = {МЦНМО},
+	year      = {2012},
+	address   = {Москва},
+	edition   = {4},
+	pagetotal = {348},
+	isbn      = {9785443900261},
+	hyphenation  = {russian}
+}
 
+@Online{src9,
+	title= { Информация -- Большая советская энциклопедия },
+	url =          { https://gufo.me/dict/bse/%D0%98%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D0%B8%D1%8F },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src10,
+	title= { ГОСТ Р 50922-2006. Защита информации. Основные термины и определения },
+	url =          { http://docs.cntd.ru/document/gost-r-50922-2006 },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@Online{src11,
+	title= { ГОСТ Р 53114-2008 },
+	url =          { http://docs.cntd.ru/document/gost-r-53114-2008 },
+	urldate =      {2020-06-10},
+	hyphenation =     {russian}
+}
+
+@BOOK{src12,
+	author    = {А.И. Музыкантский and В.В. Фурин}, 
+	title     = {Лекции по криптографии},
+	publisher = {МЦНМО},
+	year      = {2013},
+	address   = {Москва},
+	edition   = {2},
+	pagetotal = {68},
+	isbn      = {9785443900865},
+	hyphenation  = {russian}
+}
+\begin{comment}
+@BOOK{src13,
+	author    = {Friedrich L. Bauer}, 
+	title     = {Decrypted Secrets: Methods and Maxims of Cryptology},
+	publisher = {Springer},
+	year      = {2007},
+	address   = {Berlin},
+	edition   = {4},
+	pagetotal = {555},
+	isbn      = {9783540245025},
+	hyphenation  = {english}
+}
 
 
 
