PDF: Chapter 1: Part 1/2

--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -101,7 +101,7 @@
 	isbn      = {9785443900865},
 	hyphenation  = {russian}
 }
-\begin{comment}
+
 @BOOK{src13,
 	author    = {Friedrich L. Bauer}, 
 	title     = {Decrypted Secrets: Methods and Maxims of Cryptology},
@@ -114,6 +114,24 @@
 	hyphenation  = {english}
 }
 
+@Online{src14,
+	title= { Secrecy (Obscurity) is a Valid Security Layer },
+	url =          { https://danielmiessler.com/study/security-by-obscurity/ },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
+
+@BOOK{src15,
+	author    = {Bruce Schneier}, 
+	title     = {Applied Cryptography, Second Edition: Protocols, Algorthms, and Source Code in C (cloth)},
+	publisher = {John Wiley and Sons, Inc},
+	year      = {1996},
+	edition   = {1},
+	month     = {1},
+	pagetotal = {1027},
+	isbn      = {0471128457},
+	hyphenation  = {english}
+}
 
 
 
