PDF: Add title, task Chapter 5: Add minor remarks from the scientific director

--- a/PDF/my_folder/my_biblio.bib
+++ b/PDF/my_folder/my_biblio.bib
@@ -1,6 +1,22 @@
 % Examples from https://verbosus.com/bibtex-style-examples.html
 
 
+@techreport{task_src1,
+	type = {Standard},
+	key = {ISO 3690:2013},
+	month = may,
+	year = {2013},
+	title = {Programming Languages — C++},
+	url = { http://www.open-std.org/jtc1/sc22/wg21/docs/papers/2013/n3690.pdf },
+	hyphenation = {english}
+}
+
+@Online{task_src2,
+	title= { C++ Standard Library headers },
+	url =          { https://en.cppreference.com/w/cpp/header },
+	urldate =      {2020-06-10},
+	hyphenation =     {english}
+}
 
 
 
