--- a/PDF/template_settings/common/renames.tex
+++ b/PDF/template_settings/common/renames.tex
@@ -1,64 +1,63 @@
 %%% Внесите свои данные - Input your data
 %%
 %%
-\newcommand{\Author}{И.О.\,Фамилия} % И.О. Фамилия автора 
-\newcommand{\AuthorFull}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора
-\newcommand{\AuthorFullDat}{Фамилия Имя Отчество} % Фамилия Имя Отчество автора в дательном падеже (Кому? Студенту...)
-\newcommand{\AuthorPhone}{+7-9XX-XXX-XX-XX} % номер телефорна автора для оперативной связи  
-\newcommand{\Supervisor}{И.О.\,Фамилия} % И. О. Фамилия научного руководителя
-\newcommand{\SupervisorVin}{И.О.\,Фамилию} % И. О. Фамилия научного руководителя  в винительном падеже (Кого? что? Руководителя ...)
-\newcommand{\SupervisorJob}{должность} %
-\newcommand{\SupervisorJobVin}{должность} % в винительном падеже (Кого? что?  Програмиста ...)
-\newcommand{\SupervisorDegree}{степень} %
-\newcommand{\SupervisorTitle}{звание} % 
+\newcommand{\Author}{Д.М.\,Момот} % И.О. Фамилия автора 
+\newcommand{\AuthorFull}{Момот Даниэль Михайлович} % Фамилия Имя Отчество автора
+\newcommand{\AuthorFullDat}{Момоту Даниэлю Михайловичу} % Фамилия Имя Отчество автора в дательном падеже (Кому? Студенту...)
+\newcommand{\AuthorPhone}{+7-964-321-91-45} % номер телефорна автора для оперативной связи  
+\newcommand{\Supervisor}{А.В.\,Сергеев} % И. О. Фамилия научного руководителя
+\newcommand{\SupervisorVin}{А.В.\,Сергеева} % И. О. Фамилия научного руководителя  в винительном падеже (Кого? что? Руководителя ...)
+\newcommand{\SupervisorJob}{доцент ВШИСиСТ}
+\newcommand{\SupervisorJobVin}{Доцента ВШИСиСТ} % в винительном падеже (Кого? что?  Програмиста ...)
+\newcommand{\SupervisorDegree}{к. т. н.}
+\newcommand{\SupervisorTitle}{доцент}
 %%
 %%
 %Руководитель, утверждающий задание
-\newcommand{\Head}{И.О.\,Фамилия} % И. О. Фамилия руководителя подразделения (руководителя ОП)
-\newcommand{\HeadDegree}{Должность руководителя}% Только должность:   
+\newcommand{\Head}{А.В.\,Щукин} % И. О. Фамилия руководителя подразделения (руководителя ОП)
+\newcommand{\HeadDegree}{Руководитель ОП}% Только должность:   
 %Руководитель %ОП 
 %Заведующий % кафедрой
 %Директор % Высшей школы
 %Зам. директора
-\newcommand{\HeadDep}{M} % заменить на краткую аббревиатуру подразделения или оставить пустым, если утверждает руководитель ОП
+\newcommand{\HeadDep}{} % заменить на краткую аббревиатуру подразделения или оставить пустым, если утверждает руководитель ОП
 
 %%% Руководитель, принимающий заявление
-\newcommand{\HeadAp}{И.О.\,Фамилия} % И. О. Фамилия руководителя подразделения (руководителя ОП)
-\newcommand{\HeadApDegree}{Должность руководителя}% Только должность:   
+\newcommand{\HeadAp}{А.В.\,Щукин} % И. О. Фамилия руководителя подразделения (руководителя ОП)
+\newcommand{\HeadApDegree}{Доцент}% Только должность:   
 %Руководитель ОП 
 %Заведующий кафедрой
 %Директор Высшей школы
 \newcommand{\HeadApDep}{O} % заменить на краткую аббревиатуру подразделения или оставить пустым, если утверждает руководитель ОП
 %%% Консультант по нормоконтролю
-\newcommand{\ConsultantNorm}{И.О.\,Фамилия} % И. О. Фамилия консультанта по нормоконтролю. ТОЛЬКО из числа ППС!
-\newcommand{\ConsultantNormDegree}{должность, степень} %   
-\newcommand{\ConsultantExtra}{И.О.\,Фамилия} % И. О. Фамилия дополнительного консультанта 
-\newcommand{\ConsultantExtraDegree}{должность, степень} % 
-\newcommand{\ConsultantExtraVin}{И.О.\,Фамилию} % И. О. Фамилия дополнительного консультанта в винительном падеже (Кого? что? Руководителя ...)
-\newcommand{\ConsultantExtraDegreeVin}{должность, степень} %  в винительном падеже (Кого? что? Руководителя ...)
-\newcommand{\Reviewer}{И.О.\,Фамилия} % И. О. Фамилия резензента. Обязателен только для магистров.
-\newcommand{\ReviewerDegree}{должность, степень} % 
+\newcommand{\ConsultantNorm}{В.А.\,Пархоменко} % И. О. Фамилия консультанта по нормоконтролю. ТОЛЬКО из числа ППС!
+\newcommand{\ConsultantNormDegree}{Ассистент ВШИСиСТ} %   
+\newcommand{\ConsultantExtra}{} % И. О. Фамилия дополнительного консультанта 
+\newcommand{\ConsultantExtraDegree}{} % 
+\newcommand{\ConsultantExtraVin}{} % И. О. Фамилия дополнительного консультанта в винительном падеже (Кого? что? Руководителя ...)
+\newcommand{\ConsultantExtraDegreeVin}{} %  в винительном падеже (Кого? что? Руководителя ...)
+\newcommand{\Reviewer}{} % И. О. Фамилия резензента. Обязателен только для магистров.
+\newcommand{\ReviewerDegree}{} % 
 %%
 %%
-\renewcommand{\thesisTitle}{Тема выпускной квалификационной работы}
+\renewcommand{\thesisTitle}{Сравнительный анализ алгоритмов легковесной криптографии для устройств интернета вещей}
 %\newcommand{\thesisDegree}{бакалавра}% магистра или специалиста% 
 \newcommand{\thesisDegree}{работа бакалавра}% дипломный проект, дипломная работа, магистерская диссертация %c 2020
-\newcommand{\thesisTitleEn}{Title of the thesis} %2020
-\newcommand{\thesisDeadline}{дд.мм.202X}
-\newcommand{\thesisStartDate}{дд.мм.202X}
-\newcommand{\thesisYear}{202X}
+\newcommand{\thesisTitleEn}{Comparative analysis of lightweight cryptography algorithms for IoT devices} %2020
+\newcommand{\thesisDeadline}{20.05.2020}
+\newcommand{\thesisStartDate}{03.02.2020}
+\newcommand{\thesisYear}{2020}
 %%
 %%
-\newcommand{\group}{N} % заменить вместо N номер группы
-\newcommand{\thesisSpecialtyCode}{ХХ.ХХ.ХХ}% код направления подготовки
-\newcommand{\thesisSpecialtyTitle}{Наименование направления подготовки} % наименование направления/специальности
-\newcommand{\thesisOPPostfix}{YY} % последние цифры кода образовательной программы (после <<_>>)
-\newcommand{\thesisOPTitle}{Наименование направленности (профиля) образовательной программы}% наименование образовательной программы
+\newcommand{\group}{3530903/60301} % заменить вместо N номер группы
+\newcommand{\thesisSpecialtyCode}{09.03.03}% код направления подготовки
+\newcommand{\thesisSpecialtyTitle}{Прикладная информатика} % наименование направления/специальности
+\newcommand{\thesisOPPostfix}{03} % последние цифры кода образовательной программы (после <<_>>)
+\newcommand{\thesisOPTitle}{Прикладная информатика в области информационных ресурсов}% наименование образовательной программы
 %%
 %%
 \newcommand{\institute}{
-Название института
-%Институт компьютерных наук и технологий
+Институт компьютерных наук и технологий
 %Гуманитарный институт
 %Инженерно-строительный институт
 %Институт биомедицинских систем и технологий
