--- a/PDF/my_folder/task.tex
+++ b/PDF/my_folder/task.tex
@@ -41,28 +41,28 @@
 \begin{enumerate}[1.]
 	\item Тема работы: {\expandafter \ulined \thesisTitle.}
 	%\item Тема работы (на английском языке): \uline{\thesisTitleEn.} % вероятно после 2021 года
-	\item Срок сдачи студентом законченной работы\footnote{Определяется руководителем ОП, но не позднее последнего числа преддипломной практики и/или не позднее, чем за 20 дней до защиты в силу п. 6.1. <<Порядка обеспечения самостоятельности выполнения письменных работ и проверки письменных работ на объем заимствований>>.}: \uline{\thesisDeadline.} 
-	\item Исходные данные по работе\footnote{Текст, который подчёркнут и/или выделен в отдельные элементы нумерационного списка, приведён в качестве примера.}: \uline{статистические данные с сайта \cite{gosstat}, а также из репозитория \cite{uci}; основным источником литературы является монография \cite{Book} и статья \cite{Article}.}%
+	\item Срок сдачи студентом законченной работы: \uline{\thesisDeadline.} 
+	\item Исходные данные по работе: \uline{спецификация языка С++11 \cite{task_src1}, библиотеки языка С++ \cite{task_src2}.}%
 	\printbibliographyTask % печать списка источников % КОММЕНТИРУЕМ ЕСЛИ НЕ ИСПОЛЬЗУЕТСЯ
 	% В СЛУЧАЕ, ЕСЛИ НЕ ИСПОЛЬЗУЕТСЯ МОЖНО ТАКЖЕ ЗАЙТИ В setup.tex и закомментировать \vspace{-0.28\curtextsize}
 	\item Содержание работы (перечень подлежащих разработке вопросов):
 	\begin{enumerate}[label=\theenumi\arabic*.]
-		\item Обзор литературы по теме ВКР.
-		\item Исследование программных продуктов.
-		\item Разработка метода/алгоритма/программы.
-		\item Апробация разработанного метода/алгоритма/программы. 
+		\item Обзор теоретических источников по темам легковесной криптографии и интернета вещей.
+		\item Обзор существующих стандартов и технических решений.
+		\item Анализ различных видов алгоритмов.
+		\item Реализация избранных алгоритмов.
+		\item Ранжирование видов алгоритмов по степени пригодности к использованию в устройствах IoT. Формулировка рекомендаций по их использованию.
 	\end{enumerate}
 	\item Перечень графического материала (с указанием обязательных чертежей): 
 	\begin{enumerate}[label=\theenumi\arabic*.]
-		\item Схема работы метода/алгоритма.
-		\item Архитектура разработанной программы/библиотеки.
+		\item Графики, отражающие результаты эксперимента.
 	\end{enumerate}	
-		\item Консультанты по работе\footnote{Подпись консультанта по нормоконтролю пока не требуется. Назначается всем по умолчанию.}:
+		\item Консультанты по работе:
 		\begin{enumerate}[label=\theenumi\arabic*.] 
-		\item  \uline{\emakefirstuc{\ConsultantExtraDegree}, \ConsultantExtra.} % закомментировать при необходимости, идёт первый по порядку.
+		%\item  \uline{\emakefirstuc{\ConsultantExtraDegree}, \ConsultantExtra.} % закомментировать при необходимости, идёт первый по порядку.
 		\item \uline{\emakefirstuc{\ConsultantNormDegree}, \ConsultantNorm{} (нормоконтроль).} %	Обязателен для всех студентов
 	\end{enumerate}
-		\item Дата выдачи задания\footnote{Не позднее 3 месяцев до защиты (утверждение тем ВКР по университету) или первого числа преддипломной практики или по решению руководителя ОП или подразделения (открытый вопрос).}: \uline{\thesisStartDate.}
+		\item Дата выдачи задания: \uline{\thesisStartDate.}
 \end{enumerate}
 
 \intervalS%можно удалить пробел
@@ -72,7 +72,7 @@
 
 \intervalS%можно удалить пробел
 
-Консультант\footnote{В случае, если есть консультант, отличный от консультанта по нормоконтролю.}  \uline{\hspace*{0.1\textheight}\ConsultantExtra}
+%Консультант\footnote{В случае, если есть консультант, отличный от консультанта по нормоконтролю.}  \uline{\hspace*{0.1\textheight}\ConsultantExtra}
 
 
 \intervalS%можно удалить пробел
